--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 
 # REQUIRED CHANGES
 # Edit next line, providing your own name.
-title: WeileLin| Professional Portfolio
+title: weile lin| Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://WeileLin.github.io"
+url: "https://weile lin.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
