--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Edit next line, providing your own name.
 title: weilelin| Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://weilelin.GitHub.io"
+url: "https://weilelin.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
